--- a/style.css
+++ b/style.css
@@ -17,7 +17,20 @@ header {
     color: #ffffff;
 }
 
-/* NAVBAR */
+.btn-login, .btn-signup {
+    padding: 10px 20px;
+    background-color: #ffffff;
+    color: #091B3D;
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.btn-login:hover, .btn-signup:hover {
+    background-color: #FFD700;
+}
 
 * {
     margin: 0;
